--- a/app/de/paju/mensch/play/views/main.scala.html
+++ b/app/de/paju/mensch/play/views/main.scala.html
@@ -4,10 +4,16 @@
 
 <html>
     <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	    <title>@title</title>    
+	   	<script src="@routes.Assets.at("js/jquery-1.10.1.min.js")"></script>
+	   	<script src="@routes.Assets.at("js/jquery-ui.js")"></script>
+	   	<script src="@routes.Assets.at("js/bootstrap.min.js")"></script>	
+		<link rel="stylesheet" href="@routes.Assets.at("style/bootstrap.min.css")">
+		<link rel="stylesheet" href="@routes.Assets.at("style/bootstrap-theme.min.css")">
+		<link rel="stylesheet" href="@routes.Assets.at("style/jquery-ui.css")">
+		<link rel="stylesheet" href="@routes.Assets.at("style/main.css")">
+		<link rel="icon" href="@routes.Assets.at("images/favicon.jpg")" type="image/jpeg">
     </head>
     <body>
         @content
