--- a/app/de/paju/mensch/play/views/gamegrid.scala.html
+++ b/app/de/paju/mensch/play/views/gamegrid.scala.html
@@ -1,6 +1,15 @@
-@(message: String)
+@(message: String, field: List[String], stack: List[String], target: List[String])
 
+<link rel="stylesheet" type="text/css" href='@routes.Assets.at("stylesheets/gamegrid.css")'>
 
 <div class="GameGridContainer" style="">
-
+		@for(i <- 0 until field.length) {
+    		<div class="gameCell" id="gameCell_@i" style="position:absolute; top:@(field(i).split(' ').apply(0)); left:@(field(i).split(' ').apply(1))"></div>
+		}
+		@for(i <- 0 until stack.length) {
+    		<div class="stackCell" id="stackCell_@i" style="position:absolute; top:@(stack(i).split(' ').apply(0)); left:@(stack(i).split(' ').apply(1))"></div>
+		}
+		@for(i <- 0 until target.length) {
+    		<div class="targetCell" id="targetCell_@i" style="position:absolute; top:@(target(i).split(' ').apply(0)); left:@(target(i).split(' ').apply(1))"></div>
+		}
 </div>
