--- a/app/de/paju/mensch/play/views/webgui.scala.html
+++ b/app/de/paju/mensch/play/views/webgui.scala.html
@@ -1,11 +1,20 @@
+<script src='@routes.Assets.at("javascripts/jquery-2.1.1.min.js")'>
+
 @main("PajuMensch") {
-	
 	<div class="TechInfo">
 		Welcome 
 	</div>
 
 	<div id="gameGrid">
 		<!--  AJAX-filled with game grid -->
+		<script type="text/javascript">
+		$.ajax({
+			url: "gameGrid",
+			context: document.body
+			}).done(function(data) {
+			$("#gameGrid").html(data);
+		});
+		</script>
 	</div>
 
 
