--- a/app/de/paju/mensch/play/views/main.scala.html
+++ b/app/de/paju/mensch/play/views/main.scala.html
@@ -6,14 +6,11 @@
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	    <title>@title</title>    
-	   	<script src="@routes.Assets.at("js/jquery-1.10.1.min.js")"></script>
-	   	<script src="@routes.Assets.at("js/jquery-ui.js")"></script>
-	   	<script src="@routes.Assets.at("js/bootstrap.min.js")"></script>	
-		<link rel="stylesheet" href="@routes.Assets.at("style/bootstrap.min.css")">
-		<link rel="stylesheet" href="@routes.Assets.at("style/bootstrap-theme.min.css")">
-		<link rel="stylesheet" href="@routes.Assets.at("style/jquery-ui.css")">
-		<link rel="stylesheet" href="@routes.Assets.at("style/main.css")">
 		<link rel="icon" href="@routes.Assets.at("images/favicon.jpg")" type="image/jpeg">
+		<link rel="stylesheet" type="text/css" href='@routes.Assets.at("styles/main.css")'/>
+	   	<link rel="stylesheet" type="text/css" href='@routes.Assets.at("styles/gamegrid.css")'/>
+		<link rel="icon" href='@routes.Assets.at("images/favicon.jpg")' type="image/jpeg"/>
+		<script src='@routes.Assets.at("js/jquery-2.1.1.min.js")'></script>
     </head>
     <body>
         @content
