--- a/app/de/paju/mensch/play/views/main.scala.html
+++ b/app/de/paju/mensch/play/views/main.scala.html
@@ -13,7 +13,8 @@
 		<link rel="icon" href='@routes.Assets.at("images/favicon.jpg")' type="image/jpeg"/>
 		<script src='@routes.Assets.at("js/jquery-2.1.1.min.js")'></script>
 		<script src='@routes.Assets.at("js/bootstrap.min.js")'></script>
-		<script src='@routes.Assets.at("js/navigation.js")'></script>
+		<script src='@routes.Assets.at("js/misc.js")'></script>
+		<script src='@routes.Assets.at("js/socket.js")'></script>
     </head>
     <body>
     	<nav class="navbar navbar-default">
@@ -23,16 +24,16 @@
 				</div>
 					<ul class="nav navbar-nav">
 	                <li id="buttonStart"><a href="#" onclick="startGame();">Start</a></li>
-	                <li id="buttonGameGrid"><a href="#" onclick="getGameGrid();">Show game</a></li>
+	                <li id="buttonDice"><a href="#" onclick="doDice();">Dice</a></li>
+	                <!--li id="buttonChooseFig"><a href="#" onclick="chooseFig();">Choose Figure</a></li-->
 	                <li id="buttonExit"><a href="#" onclick="exit();">Exit</a></li>
 	            </ul>
 			</div>
 		</nav>
+		<div class="container" id="status"></div>
 	    <div class="container" id="mainContainer">
        		<div id="gameGrid"></div>
        	</div>
-        <div id="footer" class="well">
-	        <div id="status"></div>
-	    </div>
+       	<div class="container" id="dice"></div>
     </body>
 </html>
