--- a/app/de/paju/mensch/play/views/login.scala.html
+++ b/app/de/paju/mensch/play/views/login.scala.html
@@ -15,33 +15,39 @@
 		<script src='@routes.Assets.at("js/socket.js")'></script>
     </head>
     <body>    
-    	<div class="page-header">
-		  <h1>Mensch ärgere dich nicht <small>Log In</small></h1>
+    	<div class="jumbotron header_style">
+		  <h1>Mensch ärgere dich nicht!</h1>
+		  <p>Log in and ärgere you!</p>
 		</div>
-		
-		<div class="row">
-		  <div class="col-md-4"></div>
-		  <div class="col-md-4">
-		  	
+		<div class="form_wrapper">  	
 		  	@helper.form(de.paju.mensch.play.controllers.routes.Application.authenticate) {
 				@if(form.hasGlobalErrors) {
-				    	<div class="alert alert-danger" role="alert">@form.globalError.message</div>
-				}	   
-			   <div class="input-group">
-				  <input type="text" class="form-control" name="user" placeholder="Username" aria-describedby="basic-addon1">			
-				  <input type="password" class="form-control" name="password" placeholder="Password" aria-describedby="basic-addon1">
-			   </div>
-			   <p>
-			       <button type="submit" class="btn btn-default navbar-btn">Sign in</button>
-			   </p>
+				    <div class="alert alert-danger">@form.globalError.message</div>
+				}	    
+			   <div class="form-group">
+			    <label for="inputUsername" class="col-sm-2 control-label">Username</label>
+			    <div class="col-sm-10">
+			      <input type="text" name="user" class="form-control" id="inputUsername" placeholder="Username">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+			    <div class="col-sm-10">
+			      <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="Password">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <div class="col-sm-offset-2 col-sm-10">
+			      <button type="submit" class="btn btn-default">Sign in</button>
+			    </div>
+			  </div>
 			}
+		  	<button type="button" class="btn btn-default navbar-btn" id="btnOpenID">Login with OpenID</button>
+		  		
+		</div>  	
 			
-			<button type="button" class="btn btn-default navbar-btn" id="btnOpenID">Login with OpenID</button>
+			
 		  	
-		  	
-		  </div>
-		  <div class="col-md-4"></div>
-		</div>
         <script type="text/javascript">
 			$('#btnOpenID').click(function () {
 				document.location.href = "auth";
