--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -12,3 +12,12 @@
 	text-align:center;
 	font-weight: bold;
 }
+
+.header_style {
+	text-align: center;
+}
+
+.form_wrapper {
+	width: 33%;
+	margin: 0 auto;
+}
