--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -17,7 +17,10 @@
 	text-align: center;
 }
 
-.form_wrapper {
-	width: 33%;
-	margin: 0 auto;
+
+
+.googleSign_logo {
+	content:url(../images/googleSign.png);
+	cursor:pointer;
+	zoom: 0.85;
 }
