--- a/app/de/paju/mensch/play/views/main.scala.html
+++ b/app/de/paju/mensch/play/views/main.scala.html
@@ -15,6 +15,7 @@
 		<script src='@routes.Assets.at("js/bootstrap.min.js")'></script>
 		<script src='@routes.Assets.at("js/misc.js")'></script>
 		<script src='@routes.Assets.at("js/socket.js")'></script>
+		<script src='@routes.Assets.at("js/chatSocket.js")'></script>
     </head>
     <body>
     	<nav class="navbar navbar-default">
@@ -35,8 +36,11 @@
 		</nav>
 		<div class="container" id="status"></div>
 	    <div class="container" id="mainContainer">
-       		<div class="container" id="gameGrid"></div>
-       		<div class="container" id="lobby"></div>
+		    <div class=”row”>
+	       		<div class="container col-md-4" id="gameGrid"></div>
+	       		<div class="container col-md-4" id="lobby"></div>
+	       		<div class="container col-md-4" id="chat"></div>
+	       	</div>
        	</div>
        	<div class="container" id="dice"></div>
     </body>
