--- a/app/de/paju/mensch/play/views/main.scala.html
+++ b/app/de/paju/mensch/play/views/main.scala.html
@@ -5,7 +5,14 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	    <title>@title</title>    
+	    <title>@title</title>  
+	    
+	    <script src='@routes.Assets.at("js/jquery-2.1.1.min.js")'></script>
+		<script src='@routes.Assets.at("js/bootstrap.min.js")'></script>
+		<script src='@routes.Assets.at("js/misc.js")'></script>
+		<script src='@routes.Assets.at("js/socket.js")'></script>
+		<script src='@routes.Assets.at("bower_components/webcomponentsjs/webcomponents.js")'></script>
+		  
 		<link rel="icon" href="@routes.Assets.at("images/favicon.jpg")" type="image/jpeg">
 		<link rel="stylesheet" type="text/css" href='@routes.Assets.at("styles/main.css")'/>
 	   	<link rel="stylesheet" type="text/css" href='@routes.Assets.at("styles/gamegrid.css")'/>
@@ -16,6 +23,8 @@
 		<script src='@routes.Assets.at("js/misc.js")'></script>
 		<script src='@routes.Assets.at("js/socket.js")'></script>
 		<script src='@routes.Assets.at("js/chatSocket.js")'></script>
+		<link rel="import" href='@routes.Assets.at("templates/lobbyElements.html")'/>
+		
     </head>
     <body>
     	<nav class="navbar navbar-default">
