--- a/app/de/paju/mensch/play/views/gamegrid.scala.html
+++ b/app/de/paju/mensch/play/views/gamegrid.scala.html
@@ -30,3 +30,4 @@
    			<div class="targetCell player3 empty" id="targetCell_@i" style="position:absolute; top:@(target(i).split(' ').apply(1))px; left:@(target(i).split(' ').apply(0))px;"></div>
 		}
 	}
+	<div class="player0" id="dice" style="position:absolute; top:250px; left:250px;"></div>
