--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,10 +1,12 @@
 #dice{
 	font-size:24px;
 	text-align:center;
-	width:75px;
-	height:75px;
+	width:50px;
+	height:50px;
 	font-weight: bold;
-}
+	border: 1px solid black;
+	border-radius: 5px;
+} 
 
 #chatButton{
 	font-size:18px;
@@ -68,5 +70,13 @@
 }
 
 #buttonStart{
+	display: none;
+}
+
+.statusWrapper{
+	height:50px;
+}
+
+#infoWrapper{
 	display: none;
 }
