--- a/app/de/paju/mensch/play/views/login.scala.html
+++ b/app/de/paju/mensch/play/views/login.scala.html
@@ -48,8 +48,7 @@
 				</div>
 			</div>
 			<div class="col-md-6 container">    
-			    
-				<div class="googleSign_logo" id="btnOpenID">Login with OpenID</div>		
+			    <img id="btnOpenID" class="googleSign_logo" src="/assets/images/googleSign.png" alt="Login with OpenID"></img>
 			</div>
 		</div>	
 		  	
